--- a/index.html
+++ b/index.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8">
     <title>Benoit Clicker</title>
     <!-- CSS links -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <!-- JS links -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="clicker.js"></script>
-
-
 </head>
 <body>
-<div class="main">
-    <div class="row title">
-        <h1 class="title animated bounceInDown">Benoit Cliker</h1>
-        <h3 class="subtitle">Une idee fantastique d'<i class="animated zoomInDown name">Arthur</i> et <i class="animated zoomInDown name"> Adrien</i></h3>
+<main>
+    <div class="title">
+        <h1 class="title animated bounceInDown">Benoît Clîcker</h1>
+        <h3 class="subtitle">Une idée fantastique d'<i class="animated zoomInDown name">Arthur</i> et <i class="animated zoomInDown name"> Adrien</i></h3>
     </div>
     <div class="benoit animated fadeIn">
         <a href="#" id="benoit-button">
@@ -29,6 +27,6 @@
     <div>
         <h4 class="compteur" id="benoit-count">0</h4>
     </div>
-</div>
+</main>
 </body>
 </html>
